# ProjetProgAvancee

./: .gitignore  ATH.cpp  ATH.hpp  Affichage.hpp  CMakeLists.txt  Cube.cpp  Cube.hpp  Personnage.cpp  Personnage.h  Point.cpp  Point.hpp  main.cpp  sfml-app  test.cpp
ressources/TextureATH/: Mana.xcf  barreMana.xcf  barreVie.xcf
